added some more codes in html css and js
made squares disapear when wrong color selected and all squares of same
color when right color selected

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h1>The Great Color Game <span id="colorDisplay">rgb</span></h1>
+    <div>
+      <span id="message"></span>
+
+    </div>
     <div id="container">
       <div class="square"></div>
       <div class="square"></div>
