completed javascript work

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   </head>
   <body>
     <h1>The Great Color Game <span id="colorDisplay">rgb</span></h1>
-    <div>
+    <div class="stripe">
+      <button id="reset">New Color</button>
       <span id="message"></span>
+      <button id="easy" >Easy</button>
+      <button id="hard" class="selected" >Hard</button>
 
     </div>
     <div id="container">
