--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet"  type="text/css" href="colorGame.css">
   </head>
   <body>
-    <h1>The Great Color Game <span id="colorDisplay">rgb</span></h1>
+    <h1>The Great Color Game <br>
+       <span id="colorDisplay">rgb</span>
+     </h1>
     <div class="stripe">
       <button id="reset">New Color</button>
       <span id="message"></span>
